--- a/index.html
+++ b/index.html
@@ -7,38 +7,49 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Advanced N-Queens Visualizer</h1>
-    <div id="controls">
-        <div>
-            <label for="boardSize">Board Size:</label>
-            <input type="number" id="boardSize" min="4" value="8">
+    <nav>
+        <ul>
+            <li><a href="#" class="active">N-Queens</a></li>
+            <li><a href="#">Sudoku Solver</a></li>
+            <li><a href="#">Knight's Tour</a></li>
+            <li><a href="#">Maze Solver</a></li>
+        </ul>
+    </nav>
+    
+    <main>
+        <h1>Advanced N-Queens Visualizer</h1>
+        <div id="controls">
+            <div>
+                <label for="boardSize">Board Size:</label>
+                <input type="number" id="boardSize" min="4" value="8">
+            </div>
+            <div>
+                <label for="speed">Speed:</label>
+                <select id="speed">
+                    <option value="1000">Slow</option>
+                    <option value="500" selected>Normal</option>
+                    <option value="100">Fast</option>
+                </select>
+            </div>
+            <div>
+                <button onclick="solve(false)">Solve with Animation</button>
+                <button onclick="solveInstantly()">Solve Instantly</button>
+            </div>
+            <div>
+                <button onclick="reset()">Reset</button>
+                <button onclick="">Random Problem</button>
+            </div>
         </div>
-        <div>
-            <label for="speed">Speed:</label>
-            <select id="speed">
-                <option value="1000">Slow</option>
-                <option value="500" selected>Normal</option>
-                <option value="100">Fast</option>
-            </select>
+        <div id="board"></div>
+        <div id="solutionNav" style="display: none;">
+            <button onclick="prevSolution()">Previous</button>
+            <span id="solutionCount"></span>
+            <button onclick="nextSolution()">Next</button>
         </div>
-        <div>
-            <button onclick="solve(false)">Solve with Animation</button>
-            <button onclick="solveInstantly()">Solve Instantly</button>
-        </div>
-        <div>
-            <button onclick="reset()">Reset</button>
-            <button onclick="generateRandom()">Random Problem</button>
-        </div>
-    </div>
-    <div id="board"></div>
-    <div id="solutionNav" style="display: none;">
-        <button onclick="prevSolution()">Previous</button>
-        <span id="solutionCount"></span>
-        <button onclick="nextSolution()">Next</button>
-    </div>
-    <div id="info"></div>
-    <div id="messageBox"></div>
-
+        <div id="info"></div>
+        <div id="messageBox"></div>
+    </main>
+    
     <script src="script.js"></script>
 </body>
 </html>
