--- a/i.html
+++ b/i.html
@@ -3,48 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knights Tour Visualization</title>
+    <title>Knight's Tour Visualization</title>
     <style>
+        :root {
+            --bg-color: #f0e6d2;
+            --text-color: #3a3a3a;
+            --title-color: #8b4513;
+            --board-bg: #8b4513;
+            --cell-light: #f0d9b5;
+            --cell-dark: #b58863;
+            --visited-bg: #90EE90;
+            --visited-color: #006400;
+            --button-bg: #8b4513;
+            --button-color: #f0e6d2;
+            --button-hover: #a0522d;
+        }
+
+        .dark-mode {
+            --bg-color: #2c2c2c;
+            --text-color: #e0e0e0;
+            --title-color: #d2b48c;
+            --board-bg: #4a3728;
+            --cell-light: #d2b48c;
+            --cell-dark: #8b4513;
+            --visited-bg: #32CD32;
+            --visited-color: #f0f0f0;
+            --button-bg: #6b4226;
+            --button-color: #f0e6d2;
+            --button-hover: #8b5a3b;
+        }
+
+        body {
+            font-family: 'Georgia', serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        h1 {
+            text-align: center;
+            color: var(--title-color);
+            text-shadow: 1px 1px 2px #d2b48c;
+        }
+
         #chessboard {
             display: grid;
-            grid-template-columns: repeat(8, 50px);
-            grid-template-rows: repeat(8, 50px);
+            grid-template-columns: repeat(8, 60px);
+            grid-template-rows: repeat(8, 60px);
             gap: 1px;
-            background-color: #000;
-            padding: 1px;
-            width: fit-content;
+            background-color: var(--board-bg);
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
+
         .cell {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 12px;
+            font-size: 16px;
             font-weight: bold;
             cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
         }
-        .white { background-color: #fff; }
-        .black { background-color: #ccc; }
-        .visited { background-color: #90EE90; }
+
+        .white { background-color: var(--cell-light); }
+        .black { background-color: var(--cell-dark); }
+        .visited { 
+            background-color: var(--visited-bg);
+            color: var(--visited-color);
+        }
+
+        .cell:hover {
+            transform: scale(1.05);
+        }
+
+        .knight::after {
+            content: '♞';
+            font-size: 40px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
         #controls {
+            margin-top: 20px;
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: var(--button-bg);
+            color: var(--button-color);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: var(--button-hover);
+        }
+
+
+
+        #move-counter {
+            font-size: 24px;
+            font-weight: bold;
             margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <h1>Knight's Tour</h1>
     <div id="chessboard"></div>
+    <div id="move-counter">Moves: 0</div>
     <div id="controls">
         <button id="reset">Reset</button>
         <button id="next">Next Move</button>
+        <button id="auto-play">Auto Play</button>
+        <button id="toggle-dark-mode">Toggle Dark Mode</button>
     </div>
+    <div id="message">Click on a square to start the Knight's Tour</div>
+    <div id="move-history">
+        <h3>Move History</h3>
+        <ul id="history-list"></ul>
+    </div>
+    <div id="explanation">
+        <h3>What is a Knight's Tour?</h3>
+        <p>A Knight's Tour is a sequence of moves of a knight on a chessboard such that the knight visits every square exactly once. If the knight ends on a square that is one knight's move from the beginning square (so that it could tour the board again immediately, following the same path), the tour is closed; otherwise, it is open.</p>
+    </div>
+
+    <audio id="move-sound" src="data:audio/wav;base64,UklGRigAAABXQVZFZm10IBIAAAABAAEARKwAAIhYAQACABAAAABkYXRhAgAAAAEA" preload="auto"></audio>
 
     <script>
         const board = document.getElementById('chessboard');
         const resetBtn = document.getElementById('reset');
         const nextBtn = document.getElementById('next');
+        const autoPlayBtn = document.getElementById('auto-play');
+        const toggleDarkModeBtn = document.getElementById('toggle-dark-mode');
+        const message = document.getElementById('message');
+        const historyList = document.getElementById('history-list');
+        const moveCounter = document.getElementById('move-counter');
+        const moveSound = document.getElementById('move-sound');
         let currentPosition = null;
         let moveCount = 0;
+        let autoPlayInterval = null;
 
         function createBoard() {
             for (let i = 0; i < 64; i++) {
@@ -62,12 +178,17 @@
             currentPosition = parseInt(e.target.dataset.index);
             moveCount = 1;
             updateCell(currentPosition, moveCount);
+            message.textContent = "Tour started! Click 'Next Move' to continue.";
+            updateMoveHistory(currentPosition);
         }
 
         function updateCell(index, count) {
             const cell = board.children[index];
             cell.classList.add('visited');
             cell.textContent = count;
+            cell.classList.add('knight');
+            moveSound.play();
+            updateMoveCounter();
         }
 
         function getNextMoves(position) {
@@ -90,31 +211,15 @@
                 .filter(move => move !== null && !board.children[move].classList.contains('visited'));
         }
 
-        function nextMove() {
-            if (currentPosition === null) return;
-            const nextMoves = getNextMoves(currentPosition);
-            if (nextMoves.length === 0) {
-                alert('No more moves available!');
-                return;
-            }
-            const nextPosition = nextMoves[Math.floor(Math.random() * nextMoves.length)];
-            currentPosition = nextPosition;
-            moveCount++;
-            updateCell(currentPosition, moveCount);
-        }
 
-        function reset() {
-            currentPosition = null;
-            moveCount = 0;
-            Array.from(board.children).forEach(cell => {
-                cell.classList.remove('visited');
-                cell.textContent = '';
-            });
-        }
+ 
+
 
         createBoard();
         resetBtn.addEventListener('click', reset);
         nextBtn.addEventListener('click', nextMove);
+        autoPlayBtn.addEventListener('click', toggleAutoPlay);
+        toggleDarkModeBtn.addEventListener('click', toggleDarkMode);
     </script>
 </body>
 </html>
