--- a/k.html
+++ b/k.html
@@ -5,21 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Knight's Tour Visualization</title>
+    <title> Visualization</title>
     <style>
-        :root {
-            --bg-color: #f0e6d2;
-            --text-color: #3a3a3a;
-            --title-color: #8b4513;
-            --board-bg: #8b4513;
-            --cell-light: #f0d9b5;
-            --cell-dark: #b58863;
-            --visited-bg: #90EE90;
-            --visited-color: #006400;
-            --button-bg: #8b4513;
-            --button-color: #f0e6d2;
-            --button-hover: #a0522d;
-        }
+  
 
         .dark-mode {
             --bg-color: #2c2c2c;
