--- a/tree.html
+++ b/tree.html
@@ -21,18 +21,18 @@
                 <svg id="tree-svg"></svg>
             </div>
             <div class="info">
-                <div class="sec1">
+                <!-- <div class="sec1">
                     <h3>Target Sum:</h3>
                     <button class="box" id="targetSumDisplay"></button>
-                </div>
+                </div> -->
                 <div class="sec2">
                     <h3>Current Node:</h3>
                     <button class="box" id="currentNodeDisplay"></button>
                 </div>
-                <div class="sec3">
+                <!-- <div class="sec3">
                     <h3>Current Sum:</h3>
                     <button class="box" id="currentSumDisplay"></button>
-                </div>
+                </div> -->
                 <div class="sec4">
                     <h3>Tree Height:</h3>
                     <button class="box" id="treeHeight"></button>
