--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     
     <main>
-        <h1>Advanced N-Queens Visualizer</h1>
+        <h1>N-Queens Visualizer</h1>
         <div id="controls">
             <div>
                 <label for="boardSize">Board Size:</label>
