--- a/tree.html
+++ b/tree.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="t.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="index.html">N-Queens</a></li>
+            <li><a href="k.html">Knight's Tour Visualization</a></li>
+            <li><a href="binary-tree-search.html" class="active">Binary Tree Search</a></li>
+            <li><a href="maze-solver.html">Maze Solver</a></li>
+            <li><a href="graph-coloring.html">Graph Coloring</a></li>
+            <li><a href="subset-sum.html">Subset Sum</a></li>
+            <li><a href="hamiltonian-cycle.html">Hamiltonian Cycle</a></li>
+        </ul>
+    </nav>
     <header>
         <h1 class="heading">Binary Tree Backtracking Visualization</h1>
     </header>
+
     <div class="container">
         <div class="container-header">
             <button id="generate-binary" class="push">Generate Random Binary Tree</button>
